<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AcceleRadio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="rule_message_distanse">Distance:</string>
    <string name="rule_message_totalDistanse">Total distance:</string>
    <string name="rule_message_angle">Azimuth:</string>
    <string name="delete_marker_message">Marker was deleted.</string>
    <string name="delete_polygon_message">Polygon was deleted.</string>
    <string name="location_format">Location:</string>
    <string name="unit_abbreviation">m</string>
    <string name="marker_icon">marker icon</string>

    <string name="hint_new_polygone_name">Area name:</string>
    <string name="ok_button_new_marker">OK</string>
    <string name="title_new_polygone">Area Name</string>
    <string name="title_new_marker">Marker Name</string>
    <string name="sensitivity_default_value">25</string>
    <string name="Sensitivity">Compass Stability</string>
    <string name="show_custom_map_setting">Show Custom Map</string>
    <string name="clear_map_button_text">Clear Map</string>
    <string name="save_map_button_text">Save Map</string>
    <string name="load_map_button_text">Load Map</string>

    <string name="version_text">Version: </string>

    <string name="serial_number_headline"><b>#</b></string>
    <string name="name_headline"><b>Name</b></string>
    <string name="mac_headline"><b>Mac</b></string>
    <string name="location_headline"><b>Location</b></string>
    <string name="age_headline"><b>Age</b></string>
    <string name="connectivity_headline"><b>Connectivity</b></string>

    <string name="log">LOG</string>
    <string name="locations1">LOCATIONS 1</string>
    <string name="locations2">LOCATIONS 2</string>
    <string name="settings">SETTINGS</string>

    <string name="ltr_char">\u200e</string>
    <string name="tab">\u0009</string>

    <string name="me">Me</string>

    <string name="build_time">25/01/2015, 16:17</string>
    <string name="location_source">Loc src</string>
    <string name="terminal">Terminal</string>
    <string name="call_sign_tab">CALL SIGN</string>
    <string name="delay_text">"Delay in Seconds"</string>

    <string-array name="location_source_arrays">
        <item>C4Net</item>
        <item>Device</item>
        <item>Average</item>
    </string-array>
</resources>
